test_regress/t/t_class2.out
%Error: t/t_class2.v:35:16: Can't find definition of variable: 'ENUM_VAL'
   35 |       if (Cls::ENUM_VAL != 22) $stop;
      |                ^~~~~~~~
%Error: Exiting due to
